2011-01-07  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: slight code change from Andrea's previous commit. We
      don't need to allocate more variables on the stack as we have a temp 
      Ocstr* already. NLC.
      
2012-01-07 Andreas FInk <afink at smsrelay.com> 
    * gw/smsc/smsc_http.c: added new parameter for DLR named dlr-err which can
      contain a network error code which is parsed the same way the err: field
      in SMPP delivery reports are parsed.
    * configure[.in]: added support for MacOS X 10.7 Lion SDK.

2011-11-09 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c, gwlib/octstr.c.debug: fixed segfault on some systems where
      long overflow occurs. This fixes #623.
      Thanks to Lutalo Joseph Willrich for patch.

2011-10-31 Alexander Malysh <amalysh at kannel.org>
    * reverted commited that moved .foreign_id injection from dlr_add() because
      it breaks other SMSC module as SMPP.

2011-10-26 Alexander Malysh <amalysh at kannel.org>
    * wmlscript/wsgram.y: fixed compilation error.

2011-10-13  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: need to test for <sys/ucontext.h>, tbough it is defined 
      in IEEE Std 1003.1-2001/Cor 2-2004 it is not fully portable, i.e. OpenBSD
      and Cygwin lack the functionality.
    * gw-config.h.in: add HAVE_UCONTEXT macro.
    * gw/shared.c: add header include to fix implicite declaration warning. NLC.
    * gwlib/utils.c: include <sys/ucontext.h> only if the system has user 
      context support, fix minor compiler warning. 
      
2011-10-11 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.[ch], gwlib/utils.[ch]: extracted backtrace output into extra
      function. Added fatal signal handler in order to be able to trace segfaults.

2011-10-11  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: moved .foreign_id injection from dlr_add() to the
      submit_sm_resp PDU handling code, otherwise we would ONLY see foreign IDs